@@ -4,6 +4,7 @@ Requires
 New features
 ~~~~~~~~~~~~
 - #2308: refactored generation of attached files and images URIs
+- #2310: ZCML registration for widgets and field classes
 Bug fixes
 ~~~~~~~~~
 - #2303: fixed western localisations of javascript calendar (latin-9->utf-8)
